# opencv-object-tracker-demo

./: .gitignore  DOWNLOAD_MODEL.md  README.md  opencv_object_tracker.py  pyproject.toml
